fix server team table spacing

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -987,9 +987,13 @@ a:visited:hover {
         }
     }
 
+    .table-row:nth-child(2) > * {
+        padding-top: 0.125em;
+    }
+
     .table-row > * {
         border-right: 2px solid #fff;
-        height: 1.15em;
+        height: 1.2em;
 
         &:first-child {
             border-left: 2px solid #fff;
